Spacing fix

--- a/themes/leos-theme/css/custom.css
+++ b/themes/leos-theme/css/custom.css
@@ -380,7 +380,7 @@ video {
     padding-left: 1rem;
     padding-right: 1rem;
     width: 16rem;
-    height: 16rem;
+    height: 20rem;
 }
 .social-media-item{
     display: inline-block;
